# PixieKV

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: lib.rs  main.rs
src/domain/: constants.rs  database.rs  embedded_database.rs  mod.rs  persistent.rs  pixie_kv.rs  pixie_kv_store.rs  storage.rs
